--- a/index.css
+++ b/index.css
@@ -1,57 +1,3 @@
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-}
-
-.header-container {
-  border: 1px solid;
-  justify-content: space-between;
-}
-
-.header-left {
-  display: flex;
-  align-items: center;
-}
-
-.header-container {
-  display: flex;
-  align-items: center;
-}
-
-.logo {
-  width: 50px;
-  /* float: left; */
-}
-
-.header-right > ul {
-  display: flex;
-  list-style: none;
-}
-
-.header-right > ul > li > a {
-  margin: 10px;
-  padding: 10px;
-}
-
-.res-card {
-  border: 1px solid;
-  width: 200px;
-  padding: 5px;
-  margin: 10px;
-}
-
-.res-card:hover {
-  cursor: pointer;
-  box-shadow: 5px 5px 15px 0px;
-}
-
-.res-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.res-card-img > img {
-width: 100%;
-}
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
